<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       android:layout_width="match_parent"
       android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/guide_left"
            app:layout_constraintGuide_begin="10dp"
    />
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/guide_right"
            app:layout_constraintGuide_end="10dp"
    />
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/guide_middle_left"
            app:layout_constraintGuide_percent="0.48"
    />
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/guide_middle_right"
            app:layout_constraintGuide_percent="0.52"
    />

    <com.google.android.material.button.MaterialButton
            android:text="@string/addition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintEnd_toEndOf="@id/guide_middle_left"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/button_addition"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/soustraction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guide_middle_right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_right"
            android:id="@+id/button_soustraction"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/multiplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guide_middle_right"
            app:layout_constraintTop_toBottomOf="@id/button_soustraction"
            app:layout_constraintEnd_toEndOf="@id/guide_right"
            android:id="@+id/button_multiplication"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/division"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintEnd_toEndOf="@id/guide_middle_left"
            app:layout_constraintTop_toBottomOf="@id/button_addition"
            android:id="@+id/button_division"/>
</androidx.constraintlayout.widget.ConstraintLayout>