<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
          xmlns:app="http://schemas.android.com/apk/res-auto"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/guide_left"
            app:layout_constraintGuide_begin="10dp"
    />
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/guide_right"
            app:layout_constraintGuide_end="10dp"
    />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintEnd_toEndOf="@id/guide_right"
            android:layout_marginVertical="20px"
            android:id="@+id/first_input_layout"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombre1"
                android:hint="@string/premier_nombre"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/first_input_layout"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintEnd_toEndOf="@id/guide_right"
            android:layout_marginVertical="20px"
            android:id="@+id/second_input_layout"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombre2"
                android:hint="@string/second_nombre"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:text="@string/calcul"
            android:layout_margin="20px"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@color/colorAccent"
            android:textColor="#ffffff"
            app:layout_constraintTop_toBottomOf="@+id/second_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:id="@+id/result"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>